<resources>
    <string name="app_name">CrackMeAndroid</string>
    <string name="check_root">Check Root</string>
    <string name="crack_me_edts">Crack Me - EDTS ☠️</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="verify">Verify</string>
    <string name="verify_serial_number">Verify Serial Number</string>
    <string name="input_serial_number">Input Serial Number</string>
    <string name="pro_version">PRO VERSION</string>
    <string name="trial_version">TRIAL VERSION</string>
    <string name="fetch_cat_facts_from_api">Fetch Cat Facts from API</string>
</resources>