<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="@id/main">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/crack_me_edts"
            android:textFontWeight="800"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/pro_version"
            android:textFontWeight="800"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCheckRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_root" />

        <Button
            android:id="@+id/btnFetchCatFactsFromAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch_cat_facts_from_api" />

        <Button
            android:id="@+id/btnEnterSerialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_serial_number" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>